--- a/sideprojects.html
+++ b/sideprojects.html
@@ -103,7 +103,7 @@
                     Follow my adventure as I build my own quadcopter and control system.
                 </p>
                 <p>
-                    <a class="btn btn-default" href="quadcopter.html" role="button">View Progress &raquo;</a>
+                    <a class="btn btn-default" href="quadcopter.html" role="button">View Project &raquo;</a>
                 </p>
                 <a href="#rov" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
@@ -124,7 +124,7 @@
                     My senior project, which involves the design and development of an underwater remotely operated vehicle (ROV). Sponsored by Northrop Grumman.
                 </p>
                 <p>
-                    <a class="btn btn-default" href="rov.html" role="button">View Progress &raquo;</a>
+                    <a class="btn btn-default" href="rov.html" role="button">View Project &raquo;</a>
                 </p>
                 <a href="#jacket" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
@@ -159,8 +159,8 @@
     <section id="juicypong" class="container text-center parent">
         <div class="row child">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center">
-                    <font color="red">J</font><font color="orange">u</font><font color="yellow">i</font><font color="green">c</font><font color="blue">y</font> <font color="purple">P</font><font color="red">o</font><font color="orange">n</font><font color="yellow">G</font>
+                <h1 class="text-center" style="font-size:60px">
+                    <font color="red" id="heartShadow">J</font><font color="orange" id="orangeShadow">u</font><font color="yellow" id="quadShadow">i</font><font color="green" id="greenShadow">c</font><font color="blue" id="blueShadow">y</font> <font color="purple" id="purpleShadow">P</font><font color="red" id="heartShadow">o</font><font color="orange" id="orangeShadow">n</font><font color="yellow" id="quadShadow">G</font>
                 </h1>
                 <p>
                     Created at the 2015 Intel XDK GDC Game Jam at Cal Poly<br>
@@ -180,13 +180,13 @@
                     My Contribution
                 </h3>
                 <p style="font-size:16px">
-                    Helped with overall game design, worked on the core gameplay mechanics, and created the power-ups.
+                    Helped with game design, worked on core gameplay mechanics, and created power-ups.
                 </p>
                 <h3 class="mylabelyellow noshadow">
                     Game Description
                 </h3>
                 <p style="font-size:16px">
-                    Juicy Pong is a 2-player game based on the timeless classic, "Pong"... but with a twist! As you continue playing, the game gets "juicier" with more exciting effects. The game also features an experience mechanic that will provide players with several power-ups to aid you to victory! Music created by Elliot Fiske.
+                    Juicy Pong is a 2-player game based on the timeless classic, "Pong"... but with a twist! As you continue playing, the game gets "juicier" with more exciting effects. The game also features an experience mechanic that will provide players with several power-ups to aid you to victory!
                 </p>
                 <p>
                     <a class="btn btn-default" href="GDCJam/www/index.html" role="button">Play Game &raquo;</a>
