--- a/workselect.html
+++ b/workselect.html
@@ -18,6 +18,7 @@
     <link href="css/grayscale.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="css/sidestyle.css">
     <link rel="stylesheet" href="css/workselectstyle.css">
 
     <!-- Custom Fonts -->
@@ -70,7 +71,7 @@
                     <div class="row child">
                         <div class="col-md-6">
                             <img src="img/Aerospace.png" style="width:44%" id="myShadow"></img>
-                            <h1 class="btn mylink" id="myShadow">
+                            <h1 class="btn mylink" id="rovShadow">
                                 <a href="workprojects.html">
                                     The Aerospace Corporation
                                 </a>
@@ -84,7 +85,7 @@
                         </div>
                         <div class="col-md-6">
                             <img src="img/Adobe.png" style="width:50%" id="myShadow"></img>
-                            <h1 class="btn mylink" id="myShadow">
+                            <h1 class="btn mylink" id="rovShadow">
                                 <a href="https://github.com/tmaudev/gitrob">
                                     Adobe Systems Incorporated
                                 </a>
