--- a/sideprojects.html
+++ b/sideprojects.html
@@ -55,10 +55,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#quadcopter">Quadcopter</a>
+                        <a class="page-scroll" href="#rov">ROV</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#rov">ROV</a>
+                        <a class="page-scroll" href="#quadcopter">Quadcopter</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#jacket">Jacket</a>
@@ -82,7 +82,7 @@
                         <h1 class="brand-heading" id="myShadow">Projects</h1>
                         <p class="intro-text" id="myShadow">Some fun projects I have worked on during and outside of school.
                         </p>
-                        <a id="myShadow" href="#quadcopter" class="btn btn-circle page-scroll">
+                        <a id="myShadow" href="#rov" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                         <h3 id="myShadow">Projects</h3>
@@ -91,27 +91,6 @@
             </div>
         </div>
     </header>
-
-    <!-- Quadcopter Section -->
-    <section id="quadcopter" class="container text-center parent">
-        <div class="row child">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center" style="font-size:60px; color:#ffff66;" id="quadShadow">
-                    Quadcopter
-                </h1>
-                <p>
-                    Follow my adventure as I build my own quadcopter and control system.
-                </p>
-                <p>
-                    <a class="btn btn-default" href="quadcopter.html" role="button">View Project &raquo;</a>
-                </p>
-                <a href="#rov" class="btn btn-circle page-scroll">
-                    <i class="fa fa-angle-double-down animated"></i>
-                </a>
-                <h3 id="myDescription">Next Project</h3>
-            </div>
-        </div>
-    </section>
 
     <!-- ROV Section -->
     <section id="rov" class="container text-center parent">
@@ -125,6 +104,27 @@
                 </p>
                 <p>
                     <a class="btn btn-default" href="rov.html" role="button">View Project &raquo;</a>
+                </p>
+                <a href="#quadcopter" class="btn btn-circle page-scroll">
+                    <i class="fa fa-angle-double-down animated"></i>
+                </a>
+                <h3 id="myDescription">Next Project</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Quadcopter Section -->
+    <section id="quadcopter" class="container text-center parent">
+        <div class="row child">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="text-center" style="font-size:60px; color:#ffff66;" id="quadShadow">
+                    Quadcopter
+                </h1>
+                <p>
+                    Follow my adventure as I build my own quadcopter and control system.
+                </p>
+                <p>
+                    <a class="btn btn-default" href="quadcopter.html" role="button">View Project &raquo;</a>
                 </p>
                 <a href="#jacket" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
