Updated Main Page and Pictures

--- a/resume.html
+++ b/resume.html
@@ -89,6 +89,9 @@
             <a href="#main" class="btn" data-filter=".edu">
                 Education
             </a>
+            <a href="#main" class="btn" data-filter=".leadership">
+                Leadership
+            </a>
             <a href="#main" class="btn" data-filter=".skills">
                 Technical Skills
             </a>
@@ -108,13 +111,37 @@
                   B.S. in <u>Computer Engineering</u><br><br>
                   5th Year Undergraduate<br><br>
                   Graduating June 2016<br><br>
-                  Overall GPA: 3.312<br><br>
                   Dean's List 5 Times
                </h3>
                <br>
                <p>
                   <a class="btn btn-default" href="schoolprojects.html" role="button">View School Courses &raquo;</a>
                </p>
+            </div>
+
+            <div class="box leadership">
+               <h2>Northrop Grumman Collaboration Project (Cal Poly SLO)</h2>
+               <h4>
+                  Computer Vision Technical Lead for Aerial and Underwater Systems<br><br>
+                  Lead Computer Engineer for Underwater Systems<br><br>
+               </h4>
+               <h2>Eagle Scout</h2>
+               <h4>
+                  Active Member of the Boy Scouts of America (BSA) for 8 Years<br><br>
+                  <b>Positions Held:</b> Patrol Leader, Troop Guide, Historian<br><br>
+                  Member of the Order of the Arrow (National Honor Society for BSA)<br><br>
+               </h4>
+               <h2>Music Programs</h2>
+               <h4>
+                  Played Clarinet in Music Ensembles for 13 Years<br><br>
+                  <b>Positions Held:</b> University Marching Band Section Leader, Uniform Manager<br><br>
+                  Received "Section of the Year" Award Under My Leadership<br><br>
+               </h4>
+               <h2>Cal Poly Week of Welcome Orientation Program</h2>
+               <h4>
+                  Participated for 2 Years
+                  <b>Positions Held:</b> Event Staff and Group Leader<br><br>
+               </h4>
             </div>
 
             <div class="box skills">
@@ -131,7 +158,7 @@
                   PID Controllers<br><br>
                   AHRS Algorithms<br><br>
                   Computer Vision<br><br>
-                  AVR Microcontrollers<br><br>
+                  AVR Microcontrollers
                </h4>
                <br>
                <h2>Operating Systems</h2>
@@ -143,7 +170,7 @@
                <br>
                <h2>Development Environments</h2>
                <h4>
-                  Unix Terminal (VIM), Xcode, Atmel Studio, Visual Studio, Eclipse, Netbeans
+                  Unix Terminal (VIM), Xcode, Atmel Studio, MATLAB, Visual Studio, Eclipse, Netbeans
                </h4>
                <p></p>
             </div>
