--- a/rov.html
+++ b/rov.html
@@ -184,7 +184,7 @@
                     System Testing
                 </h1>
                 <br>
-                <img src="img/OpenROV.jpg" style="width:40%"></img>
+                <img src="img/Water_Test_3.jpg" style="width:40%"></img>
                 <h2 class="mylabelblue">OpenROV</h2>
                 <p>
                     We will be using the OpenROV platform to test our software while the Mechanical Engineering team builds our first prototype.
