--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#resume">Résumé</a>
                     </li>
                     <li>
@@ -78,15 +81,34 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" id="myShadow">Tyler Mau</h1>
                         <p class="intro-text" id="myShadow">A compilation of my programming projects and achievements from over the years.</p>
-                        <a id="myShadow" href="#resume" class="btn btn-circle page-scroll">
+                        <a id="myShadow" href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
-                        <h3 id="myShadow">Résumé</h3>
+                        <h3 id="myShadow">About Me</h3>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- About Me Section -->
+    <section id="about" class="container text-center parent">
+        <div class="row child">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1 class="text-center">About Me</h1>
+                <br>
+                <img src="img/TylerROV.jpg" style="width:20%"></img>
+                <p>
+                    <br>
+                    I'm currently a 5th year Computer Engineering student (graduating June 2016) aspiring to work in the field of robotics. My main areas of focus include computer vision, artificial intelligence, and control systems. The most enjoyable moments in my life usually include working on my many robotics projects. I love research and will never stop learning new things. I can't wait for graduate school, but in the mean time I'll just keep researching and working on projects!
+                </p>
+                <a href="#projects" class="btn btn-circle page-scroll">
+                    <i class="fa fa-angle-double-down animated"></i>
+                </a>
+                <h3 id="myDescription">Résumé</h3>
+            </div>
+        </div>
+    </section>
 
     <!-- Résumé Section -->
     <section id="resume" class="container text-center parent">
@@ -96,7 +118,7 @@
                 <p>A brief overview of my skills, knowledge, and experience.</p>
                 <p>
                     <a class="btn btn-default" href="resume.html" role="button">Interactive &raquo;</a>
-                    <a class="btn btn-default" href="Tyler Mau Resume.pdf" role="button">PDF Version &raquo;</a>
+                    <a class="btn btn-default" href="TylerMauResume.pdf" role="button">PDF Version &raquo;</a>
                 </p>
                 <br><br>
                 <a href="#projects" class="btn btn-circle page-scroll">
@@ -111,34 +133,44 @@
     <section id="projects" class="container content-section text-center parent" style="padding-top: 10px">
         <!-- Example row of columns -->
         <div class="row child">
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h3 class="btn mylink">
                     <a href="schoolprojects.html">
                         University
                     </a>
                 </h3>
                 <p>
-                    Information about my completed university courses.
+                    Completed university courses.
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h3 class="btn mylink">
                     <a href="workselect.html">
                         Internships
                     </a>
                 </h3>
                 <p>
-                    Projects from my professional work experience.
+                    Professional work experience.
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <h3 class="btn mylink">
                     <a href="sideprojects.html">
                         Projects
                     </a>
                 </h3>
                 <p>
-                    Details of projects from both school and outside of the classroom.
+                    Current and completed projects.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <h3 class="btn mylink">
+                    <a href="http://tylermmau.com/robotics">
+                        Research
+                    </a>
+                </h3>
+                <p>
+                    My technical research blog.
                 </p>
             </div>
             <a href="#contact" class="btn btn-circle page-scroll">
@@ -152,6 +184,7 @@
     <section id="contact" class="container text-center parent">
         <div class="row child">
             <div class="col-lg-8 col-lg-offset-2">
+                <img src="img/Tyler_1.jpg" style="width:20%"></img>
                 <h2>Contact Tyler Mau</h2>
                 <p>Feel free to contact me through email or phone!</p>
                 <p>
