--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" id="myShadow">Tyler Mau</h1>
-                        <p class="intro-text" id="myShadow">A compilation of my programming projects and achievements from over the years.</p>
+                        <p class="intro-text" id="myShadow">A compilation of my projects and achievements from over the years.</p>
                         <a id="myShadow" href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
