Fixed Image Problem

--- a/quadcopter.html
+++ b/quadcopter.html
@@ -178,7 +178,7 @@
                     System Testing
                 </h1>
                 <br>
-                <img src="img/Quadcopter.jpg" style="width:40%"></img>
+                <img src="img/Quadcopter.JPG" style="width:40%"></img>
                 <p>
                     <br>
                     The first prototype will be built using a pre-manufactured fiberglass frame.
