--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h1 class="text-center">About Me</h1>
                 <br>
-                <img src="img/TylerROV.jpg" style="width:20%"></img>
+                <img src="img/TylerROV.JPG" style="width:20%"></img>
                 <p>
                     <br>
                     I'm currently a 5th year Computer Engineering student (graduating June 2016) aspiring to work in the field of robotics. My main areas of focus include computer vision, artificial intelligence, and control systems. The most enjoyable moments in my life usually include working on my many robotics projects. I love research and will never stop learning new things. I can't wait for graduate school, but in the mean time I'll just keep researching and working on projects!
@@ -184,7 +184,7 @@
     <section id="contact" class="container text-center parent">
         <div class="row child">
             <div class="col-lg-8 col-lg-offset-2">
-                <img src="img/Tyler_1.jpg" style="width:20%"></img>
+                <img src="img/Tyler_1.JPG" style="width:20%"></img>
                 <h2>Contact Tyler Mau</h2>
                 <p>Feel free to contact me through email or phone!</p>
                 <p>
