Fixed Link Issue

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <br>
                     I'm currently a 5th year Computer Engineering student (graduating June 2016) aspiring to work in the field of robotics. My main areas of focus include computer vision, artificial intelligence, and control systems. The most enjoyable moments in my life usually include working on my many robotics projects. I love research and will never stop learning new things. I can't wait for graduate school, but in the mean time I'll just keep researching and working on projects!
                 </p>
-                <a href="#projects" class="btn btn-circle page-scroll">
+                <a href="#resume" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                 </a>
                 <h3 id="myDescription">Résumé</h3>
