Added Site Logo to All Pages

--- a/sideprojects.html
+++ b/sideprojects.html
@@ -24,6 +24,8 @@
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
+    <link rel="shortcut icon" href="img/WebsiteLogo.ico.png">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -142,7 +144,7 @@
                     Heart-Rate LED Jacket
                 </h1>
                 <p>
-                    For an open-ended class project, I modified a jacket with RGB LEDs to display the wearer's heart-rate. As a bonus, the LEDs changed color with the ambient temperature.
+                    For an open-ended class project, I modified a jacket with RGB LEDs to pulse at the wearer's heart-rate. As a bonus, the LEDs changed color with the ambient temperature.
                 </p>
                 <p>
                     <img src="img/jacket.jpg" width="35%;">
